@@ -1,147 +1,364 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<parent>
-		<artifactId>parent</artifactId>
-		<groupId>org.biopax.validator</groupId>
-		<version>5.0.0-SNAPSHOT</version>
-	</parent>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-	<modelVersion>4.0.0</modelVersion>
-	<artifactId>biopax-validator-web</artifactId>
-	<packaging>war</packaging>
-	<name>Webservice</name>
-	<description>BioPAX Validator Web Service</description>
-	<url>https://biopax.github.io/validator</url>
+  <modelVersion>4.0.0</modelVersion>
 
-	<build>
-		<finalName>biopax-validator</finalName>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-war-plugin</artifactId>
-				<configuration>
-					<webResources>
-						<resource>
-							<filtering>true</filtering>
-							<targetPath>WEB-INF/views</targetPath>
-							<directory>src/main/webapp/WEB-INF/views</directory>
-							<includes>
-								<include>*.jsp</include>
-							</includes>
-						</resource>
-					</webResources>
-				</configuration>
-			</plugin>
-			<!-- Must run this exec-jar as:
-			java -javaagent:spring-instrument.jar -Xmx2g -jar target/biopax-validator-web-<VERSION>-exec-war.jar
-			-->
-			<plugin>
-				<groupId>org.apache.tomcat.maven</groupId>
-				<artifactId>tomcat7-maven-plugin</artifactId>
-				<version>2.1</version>
-				<executions>
-					<execution>
-						<id>tomcat-run</id>
-						<goals>
-							<goal>exec-war-only</goal>
-						</goals>
-						<phase>package</phase>
-						<configuration>
-							<path>/</path>
-							<enableNaming>false</enableNaming>
-							<attachArtifactClassifier>exec-war</attachArtifactClassifier>
-							<attachArtifactClassifierType>jar</attachArtifactClassifierType>
-							<!-- An HTTP access log pattern ('combined', modified just to get actual client IP)
-                                 to match the ELK built-in %{COMBINEDAPACHELOG} Grok pattern -->
-							<accessLogValveFormat>%{X-Forwarded-For}i %l %u %t "%r" %s %b "%{Referer}i" "%{User-Agent}i"</accessLogValveFormat>
-							<finalName>biopax-validator.jar</finalName>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>com.spotify</groupId>
-				<artifactId>dockerfile-maven-plugin</artifactId>
-				<configuration>
-					<repository>${docker.image.prefix}/biopax-validator</repository>
-					<buildArgs>
-						<JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
-					</buildArgs>
-				</configuration>
-				<!--<executions>-->
-				<!--<execution>-->
-				<!--<id>default</id>-->
-				<!--<phase>deploy</phase>-->
-				<!--<goals>-->
-				<!--<goal>build</goal>-->
-				<!--<goal>push</goal>-->
-				<!--</goals>-->
-				<!--</execution>-->
-				<!--</executions>-->
-			</plugin>
-		</plugins>
-	</build>
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>2.1.0.RELEASE</version>
+  </parent>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.biopax.validator</groupId>
-			<artifactId>biopax-validator</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>taglibs</groupId>
-			<artifactId>standard</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>commons-beanutils</groupId>
-			<artifactId>commons-beanutils</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>commons-digester</groupId>
-			<artifactId>commons-digester</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>commons-collections</groupId>
-			<artifactId>commons-collections</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>jstl</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>commons-fileupload</groupId>
-			<artifactId>commons-fileupload</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-webmvc</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>jcl-over-slf4j</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>log4j-over-slf4j</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-classic</artifactId>
-			<version>1.2.3</version>
-			<scope>runtime</scope>
-		</dependency>
-	</dependencies>
+  <groupId>org.biopax.validator</groupId>
+  <artifactId>biopax-validator-web</artifactId>
+  <version>5.0.0-SNAPSHOT</version>
+  <packaging>war</packaging>
+  <name>Webservice</name>
+  <description>BioPAX Validator Web Service</description>
+  <url>https://biopax.github.io/validator</url>
+
+  <inceptionYear>2008</inceptionYear>
+
+  <organization>
+    <name>University of Toronto (baderlab.org) and Memorial Sloan-Kettering Cancer Center (cbio.mskcc.org).
+      BioPAX.org</name>
+    <url>http://www.biopax.org</url>
+  </organization>
+
+  <mailingLists>
+    <mailingList>
+      <name>BioPAX Discussion Group</name>
+      <post>biopax-discuss@googlegroups.com</post>
+    </mailingList>
+  </mailingLists>
+
+  <licenses>
+    <license>
+      <name>MIT</name>
+      <url>https://raw.githubusercontent.com/BioPAX/validator/master/LICENSE</url>
+    </license>
+  </licenses>
+
+  <issueManagement>
+    <system>GitHub Issues</system>
+    <url>https://github.com/BioPAX/validator/issues</url>
+  </issueManagement>
+
+  <ciManagement>
+    <system>Travis CI</system>
+    <url>https://travis-ci.org/BioPAX/validator</url>
+  </ciManagement>
+
+  <scm>
+    <connection>scm:git:git://github.com/BioPAX/validator.git</connection>
+    <developerConnection>scm:git:git@github.com:BioPAX/validator.git</developerConnection>
+    <url>https://github.com/BioPAX/validator/tree/master/</url>
+    <tag>HEAD</tag>
+  </scm>
+
+  <distributionManagement>
+    <repository>
+      <id>ossrh</id>
+      <name>Nexus Release Repository</name>
+      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
+    <snapshotRepository>
+      <id>ossrh</id>
+      <name>Sonatype Nexus Snapshots</name>
+      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+    </snapshotRepository>
+    <downloadUrl>http://www.biopax.org/downloads/</downloadUrl>
+  </distributionManagement>
+
+  <repositories>
+    <repository>
+      <id>ossrh</id>
+      <name>OSSRH Repository</name>
+      <url>https://oss.sonatype.org/content/groups/public/</url>
+    </repository>
+  </repositories>
+
+  <developers>
+    <developer>
+      <id>rodche</id>
+      <name>Igor Rodchenkov</name>
+      <organization>University of Toronto</organization>
+      <roles>
+        <role>architect</role>
+      </roles>
+    </developer>
+    <developer>
+      <name>Gary Bader</name>
+      <organization>University of Toronto</organization>
+      <roles>
+        <role>manager</role>
+      </roles>
+    </developer>
+  </developers>
+
+  <properties>
+    <start-class>org.biopax.validator.web.Application</start-class>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <paxtools.version>5.1.0</paxtools.version>
+    <license.licenseName>MIT</license.licenseName>
+    <commons-lang3.version>3.8.1</commons-lang3.version>
+    <slf4j.version>1.7.25</slf4j.version>
+    <logback.version>1.2.3</logback.version>
+    <commons-beanutils.version>1.9.3</commons-beanutils.version>
+    <commons-digester.version>2.1</commons-digester.version>
+    <commons-collections.version>3.2.2</commons-collections.version>
+    <taglibs.standard.version>1.1.2</taglibs.standard.version>
+    <commons-fileupload.version>1.3.3</commons-fileupload.version>
+    <commons-io.version>2.4</commons-io.version>
+    <javax.activation.version>1.2.0</javax.activation.version>
+    <jaxb-runtime.version>2.4.0-b180830.0438</jaxb-runtime.version>
+    <jaxb-api.version>2.4.0-b180830.0359</jaxb-api.version>
+    <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
+    <commons-text.version>1.6</commons-text.version>
+    <docker.image.prefix>pathwaycommons</docker.image.prefix>
+    <dockerfile-maven-plugin.version>1.4.4</dockerfile-maven-plugin.version>
+    <versions-maven-plugin.version>2.7</versions-maven-plugin.version>
+    <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
+    <jvm.options>-Xmx3g -Dfile.encoding=UTF-8 --illegal-access=permit</jvm.options>
+    <agent>${settings.localRepository}/org/springframework/spring-instrument/${spring.version}/spring-instrument-${spring.version}.jar</agent>
+  </properties>
+
+  <build>
+    <finalName>biopax-validator-web</finalName>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>${maven-compiler-plugin.version}</version>
+        <configuration>
+          <!--<release>10</release>-->
+          <source>8</source>
+          <target>8</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>repackage</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <mainClass>${start-class}</mainClass>
+          <jvmArguments>${jvm.options}</jvmArguments>
+          <agent>${agent}</agent>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-war-plugin</artifactId>
+        <configuration>
+          <failOnMissingWebXml>false</failOnMissingWebXml>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>com.github.spotbugs</groupId>
+        <artifactId>spotbugs-maven-plugin</artifactId>
+        <version>3.1.7</version>
+        <configuration>
+          <onlyAnalyze>org.biopax.validator.web.-</onlyAnalyze>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>${jvm.options} -ea</argLine>
+          <includes>
+            <include>**/*Test.java</include>
+          </includes>
+          <useSystemClassLoader>false</useSystemClassLoader>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <configuration>
+          <argLine>${jvm.options} -javaagent:${agent}</argLine>
+          <runOrder>alphabetical</runOrder>
+          <includes>
+            <include>**/*IT.java</include>
+          </includes>
+          <useSystemClassLoader>false</useSystemClassLoader>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>com.spotify</groupId>
+        <artifactId>dockerfile-maven-plugin</artifactId>
+        <configuration>
+          <repository>${docker.image.prefix}/biopax-validator</repository>
+          <buildArgs>
+            <JAR_FILE>target/${project.build.finalName}.war</JAR_FILE>
+          </buildArgs>
+        </configuration>
+        <!--<executions>-->
+        <!--<execution>-->
+        <!--<id>default</id>-->
+        <!--<phase>deploy</phase>-->
+        <!--<goals>-->
+        <!--<goal>build</goal>-->
+        <!--<goal>push</goal>-->
+        <!--</goals>-->
+        <!--</execution>-->
+        <!--</executions>-->
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-site-plugin</artifactId>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.biopax.validator</groupId>
+      <artifactId>biopax-validator</artifactId>
+      <version>${project.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>commons-logging</groupId>
+          <artifactId>commons-logging</artifactId>
+        </exclusion>
+        <!--old servlet-api prevents newer embedded tomcat from starting (in spring boot 2.x app)-->
+        <exclusion>
+          <groupId>javax.servlet</groupId>
+          <artifactId>servlet-api</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>log4j</groupId>
+          <artifactId>log4j</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <!--use test resources from the biopax-validator module-->
+      <groupId>org.biopax.validator</groupId>
+      <artifactId>biopax-validator</artifactId>
+      <scope>test</scope>
+      <classifier>tests</classifier>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>javax.annotation-api</artifactId>
+      <version>${javax.annotation-api.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.activation</groupId>
+      <artifactId>javax.activation</artifactId>
+      <version>${javax.activation.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>${jaxb-api.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish.jaxb</groupId>
+      <artifactId>jaxb-runtime</artifactId>
+      <version>${jaxb-runtime.version}</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-tomcat</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.tomcat.embed</groupId>
+      <artifactId>tomcat-embed-jasper</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.springframework.boot</groupId>-->
+      <!--<artifactId>spring-boot-devtools</artifactId>-->
+      <!--<optional>true</optional>-->
+    <!--</dependency>-->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.restdocs</groupId>
+      <artifactId>spring-restdocs-mockmvc</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>taglibs</groupId>
+      <artifactId>standard</artifactId>
+      <version>${taglibs.standard.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>jstl</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>${commons-fileupload.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>${commons-io.version}</version>
+    </dependency>
+    <!--jackson-databind allows to use JAXB annotations for converting beans to JSON -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-instrument</artifactId>
+      <scope>provided</scope>
+    </dependency>
+
+    <!-- logging -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>jcl-over-slf4j</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>jul-to-slf4j</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <!-- due to org.obo in biopax-validator uses log4j impl -->
+      <groupId>org.slf4j</groupId>
+      <artifactId>log4j-over-slf4j</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+  </dependencies>
 
 </project>
